--- a/phazor/Shared/MainLayout.razor
+++ b/phazor/Shared/MainLayout.razor
@@ -6,6 +6,7 @@
 
 <div class="main">
     <div class="top-row px-4">
+        <a href="/fetchdata" target="_blank">Fetch Puppies</a>
         <a href="https://docs.microsoft.com/en-us/aspnet/" target="_blank">About</a>
     </div>
 
