Updated the menu and some other static contents

--- a/phazor/Pages/FetchDogData.razor
+++ b/phazor/Pages/FetchDogData.razor
@@ -21,3 +21,4 @@
         dog = await dogService.GetRandomDogImageAsync();
     }
 }
+<p>All dogs came from <a href="http://dog.ceo">dog.ceo</a>.</p>
